--- a/src/public/index.html
+++ b/src/public/index.html
@@ -65,11 +65,15 @@
         }
       }
 
+      validSpots = validSpots.filter((num) => grid[num[0]][num[1]] === 0);
+
       let [row, col] =
         validSpots[Math.floor(Math.random() * validSpots.length)];
 
+      console.log(row, col, grid[row][col]);
+
       let elm = document.getElementById("grid").children[row * 4 + col];
-      let num = Math.random() > 0.5 ? 2 : 4;
+      let num = Math.random() > 0.75 ? 2 : 4;
 
       elm.innerHTML = num;
       elm.classList.add("n" + num);
@@ -114,8 +118,9 @@
       */
 
       if (event.keyCode === 37) {
+        oneGrid = getGrid();
         board.shiftLeft(oneGrid);
-        board.combineRow(oneGrid);
+        board.combineRow(oneGrid, 1);
         board.shiftLeft(oneGrid);
 
         twoGrid = oneDimtoTwoDim(oneGrid);
@@ -126,8 +131,9 @@
       }
 
       if (event.keyCode === 39) {
+        oneGrid = getGrid();
         board.shiftRight(oneGrid);
-        board.combineRow(oneGrid);
+        board.combineRow(oneGrid, 2);
         board.shiftRight(oneGrid);
 
         twoGrid = oneDimtoTwoDim(oneGrid);
@@ -138,6 +144,7 @@
       }
 
       if (event.keyCode === 38) {
+        oneGrid = getGrid();
         board.shiftUp(oneGrid);
         board.combineColumn(oneGrid);
         board.shiftUp(oneGrid);
@@ -150,6 +157,7 @@
       }
 
       if (event.keyCode === 40) {
+        oneGrid = getGrid();
         board.shiftDown(oneGrid);
         board.combineColumn(oneGrid);
         board.shiftDown(oneGrid);
@@ -160,6 +168,8 @@
 
         updatePage(twoGrid);
       }
+
+      console.table(twoGrid);
     });
 
     window.addEventListener("load", (event) => {
