--- a/src/public/index.html
+++ b/src/public/index.html
@@ -146,7 +146,7 @@
       if (event.keyCode === 38) {
         oneGrid = getGrid();
         board.shiftUp(oneGrid);
-        board.combineColumn(oneGrid);
+        board.combineColumn(oneGrid, 1);
         board.shiftUp(oneGrid);
 
         twoGrid = oneDimtoTwoDim(oneGrid);
@@ -159,7 +159,7 @@
       if (event.keyCode === 40) {
         oneGrid = getGrid();
         board.shiftDown(oneGrid);
-        board.combineColumn(oneGrid);
+        board.combineColumn(oneGrid, 2);
         board.shiftDown(oneGrid);
 
         twoGrid = oneDimtoTwoDim(oneGrid);
