--- a/src/public/index.html
+++ b/src/public/index.html
@@ -115,56 +115,68 @@
       down: 40
       */
 
+      let checkedMove;
+
       if (event.keyCode === 37) {
         oneGrid = getGrid();
-        board.shiftLeft(oneGrid);
-        board.combineRow(oneGrid, 1);
-        board.shiftLeft(oneGrid);
+        checkedMove = board.checkLeft(oneGrid);
+        if (checkedMove)
+        {
+          oneGrid = checkedMove;
 
-        twoGrid = oneDimtoTwoDim(oneGrid);
-        placeNum(twoGrid);
-        oneGrid = getGrid();
+          twoGrid = oneDimtoTwoDim(oneGrid);
+          placeNum(twoGrid);
+          oneGrid = twoGrid.flat();
 
-        updatePage(twoGrid);
+          updatePage(twoGrid);
+        }
+
+
       }
 
       if (event.keyCode === 39) {
         oneGrid = getGrid();
-        board.shiftRight(oneGrid);
-        board.combineRow(oneGrid, 2);
-        board.shiftRight(oneGrid);
+        checkedMove = board.checkRight(oneGrid);
+        if (checkedMove)
+        {
+          oneGrid = checkedMove;
 
-        twoGrid = oneDimtoTwoDim(oneGrid);
-        placeNum(twoGrid);
-        oneGrid = getGrid();
+          twoGrid = oneDimtoTwoDim(oneGrid);
+          placeNum(twoGrid);
+          oneGrid = getGrid();
 
-        updatePage(twoGrid);
+          updatePage(twoGrid);
+        }
       }
 
       if (event.keyCode === 38) {
         oneGrid = getGrid();
-        board.shiftUp(oneGrid);
-        board.combineColumn(oneGrid, 1);
-        board.shiftUp(oneGrid);
+        checkedMove = board.checkUp(oneGrid);
+        if (checkedMove)
+        {
+          oneGrid = checkedMove;
 
-        twoGrid = oneDimtoTwoDim(oneGrid);
-        placeNum(twoGrid);
-        oneGrid = getGrid();
+          twoGrid = oneDimtoTwoDim(oneGrid);
+          placeNum(twoGrid);
+          oneGrid = getGrid();
 
-        updatePage(twoGrid);
+          updatePage(twoGrid);
+        }
       }
 
       if (event.keyCode === 40) {
         oneGrid = getGrid();
-        board.shiftDown(oneGrid);
-        board.combineColumn(oneGrid, 2);
-        board.shiftDown(oneGrid);
+        checkedMove = board.checkDown(oneGrid);
+        if (checkedMove)
+        {
+          oneGrid = checkedMove;
 
-        twoGrid = oneDimtoTwoDim(oneGrid);
-        placeNum(twoGrid);
-        oneGrid = getGrid();
+          twoGrid = oneDimtoTwoDim(oneGrid);
+          placeNum(twoGrid);
+          oneGrid = getGrid();
 
-        updatePage(twoGrid);
+          updatePage(twoGrid);
+        }
       }
 
       console.table(twoGrid);
