--- a/src/public/index.html
+++ b/src/public/index.html
@@ -100,11 +100,24 @@
     let oneGrid = getGrid();
     let twoGrid = oneDimtoTwoDim(oneGrid);
     let connected = false;
+    let id = 0;
 
     const socket = io("http://localhost:8080");
 
     socket.on("hello", () => {
       console.log("Got a message");
+    });
+
+    socket.on("give_id", ({ num }) => {
+      id = num;
+
+      console.log(`Got a new id: ${id}`);
+    });
+
+    socket.on("update", (args) => {
+      if (args.id !== id) {
+        console.table(args.opponent);
+      }
     });
 
     window.addEventListener("keydown", (event) => {
@@ -120,66 +133,62 @@
       if (event.keyCode === 37) {
         oneGrid = getGrid();
         checkedMove = board.checkLeft(oneGrid);
-        if (checkedMove)
-        {
+
+        if (checkedMove) {
           oneGrid = checkedMove;
 
           twoGrid = oneDimtoTwoDim(oneGrid);
           placeNum(twoGrid);
-          oneGrid = twoGrid.flat();
-
           updatePage(twoGrid);
+
+          socket.emit("receive", { id, board: twoGrid });
         }
-
-
       }
 
       if (event.keyCode === 39) {
         oneGrid = getGrid();
         checkedMove = board.checkRight(oneGrid);
-        if (checkedMove)
-        {
+
+        if (checkedMove) {
           oneGrid = checkedMove;
 
           twoGrid = oneDimtoTwoDim(oneGrid);
           placeNum(twoGrid);
-          oneGrid = getGrid();
-
           updatePage(twoGrid);
+
+          socket.emit("receive", { id, board: twoGrid });
         }
       }
 
       if (event.keyCode === 38) {
         oneGrid = getGrid();
         checkedMove = board.checkUp(oneGrid);
-        if (checkedMove)
-        {
+
+        if (checkedMove) {
           oneGrid = checkedMove;
 
           twoGrid = oneDimtoTwoDim(oneGrid);
           placeNum(twoGrid);
-          oneGrid = getGrid();
-
           updatePage(twoGrid);
+
+          socket.emit("receive", { id, board: twoGrid });
         }
       }
 
       if (event.keyCode === 40) {
         oneGrid = getGrid();
         checkedMove = board.checkDown(oneGrid);
-        if (checkedMove)
-        {
+
+        if (checkedMove) {
           oneGrid = checkedMove;
 
           twoGrid = oneDimtoTwoDim(oneGrid);
           placeNum(twoGrid);
-          oneGrid = getGrid();
-
           updatePage(twoGrid);
+
+          socket.emit("receive", { id, board: twoGrid });
         }
       }
-
-      console.table(twoGrid);
     });
 
     window.addEventListener("load", (event) => {
