Added function to check for fail state

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -132,6 +132,11 @@
 
       if (event.keyCode === 37) {
         oneGrid = getGrid();
+        twoGrid = oneDimtoTwoDim(oneGrid);
+        if (!board.movesLeft(twoGrid))
+        {
+          console.log("No moves are left");
+        }
         checkedMove = board.checkLeft(oneGrid);
 
         if (checkedMove) {
